recursion.logo.spiral.Spiral.scala.error
Erreur de compilation :
Spiral:4: error: not found: value step
  spiral(step-1,90,length+increment,increment)
         ^