recursion.logo.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
  avance(length);
  gauche(angle)
  spiral(step-1,90,length+increment,increment)
}